made some changes

--- a/index.html
+++ b/index.html
@@ -1,6 +1,116 @@
+<!DOCTYPE html>
 <html>
-
+	<head>
+		<link rel="stylesheet" href="style.css">
+	</head>
 	<body>
-		<p>This could be the start of something new. -HSM</p>
+		<center>
+		<h1>Sudoku Game</h1>
+		<table border="3" cellspacing="0">
+			<tr>
+				<td><input class="number" maxlength="1" size="3"></input></td>
+				<td><input class="number" maxlength="1" size="3"></input></td>
+				<td><input class="number" maxlength="1" size="3"></input></td>
+				<td><input class="number" maxlength="1" size="3"></input></td>
+				<td><input class="number" maxlength="1" size="3"></input></td>
+				<td><input class="number" maxlength="1" size="3"></input></td>
+				<td><input class="number" maxlength="1" size="3"></input></td>
+				<td><input class="number" maxlength="1" size="3"></input></td>
+				<td><input class="number" maxlength="1" size="3"></input></td>
+			</tr>
+			<tr>
+				<td bgcolor="white"><center>3</center></td>
+				<td><input class="number" maxlength="1" size="3"></input></td>
+				<td><input class="number" maxlength="1" size="3"></input></td>
+				<td><input class="number" maxlength="1" size="3"></input></td>
+				<td><input class="number" maxlength="1" size="3"></input></td>
+				<td><input class="number" maxlength="1" size="3"></input></td>
+				<td><input class="number" maxlength="1" size="3"></input></td>
+				<td><input class="number" maxlength="1" size="3"></input></td>
+				<td><input class="number" maxlength="1" size="3"></input></td>
+			</tr>
+			<tr>
+				<td><input class="number" maxlength="1" size="3"></input></td>
+				<td><input class="number" maxlength="1" size="3"></input></td>
+				<td><input class="number" maxlength="1" size="3"></input></td>
+				<td><input class="number" maxlength="1" size="3"></input></td>
+				<td><input class="number" maxlength="1" size="3"></input></td>
+				<td><input class="number" maxlength="1" size="3"></input></td>
+				<td><input class="number" maxlength="1" size="3"></input></td>
+				<td><input class="number" maxlength="1" size="3"></input></td>
+				<td><input class="number" maxlength="1" size="3"></input></td>
+			</tr>
+			<tr>
+				<td><input class="number" maxlength="1" size="3"></input></td>
+				<td><input class="number" maxlength="1" size="3"></input></td>
+				<td><input class="number" maxlength="1" size="3"></input></td>
+				<td><input class="number" maxlength="1" size="3"></input></td>
+				<td><input class="number" maxlength="1" size="3"></input></td>
+				<td><input class="number" maxlength="1" size="3"></input></td>
+				<td><input class="number" maxlength="1" size="3"></input></td>
+				<td><input class="number" maxlength="1" size="3"></input></td>
+				<td><input class="number" maxlength="1" size="3"></input></td>
+			</tr>
+			<tr>
+				<td><input class="number" maxlength="1" size="3"></input></td>
+				<td><input class="number" maxlength="1" size="3"></input></td>
+				<td><input class="number" maxlength="1" size="3"></input></td>
+				<td><input class="number" maxlength="1" size="3"></input></td>
+				<td><input class="number" maxlength="1" size="3"></input></td>
+				<td><input class="number" maxlength="1" size="3"></input></td>
+				<td><input class="number" maxlength="1" size="3"></input></td>
+				<td><input class="number" maxlength="1" size="3"></input></td>
+				<td><input class="number" maxlength="1" size="3"></input></td>
+			</tr>
+			<tr>
+				<td><input class="number" maxlength="1" size="3"></input></td>
+				<td><input class="number" maxlength="1" size="3"></input></td>
+				<td><input class="number" maxlength="1" size="3"></input></td>
+				<td><input class="number" maxlength="1" size="3"></input></td>
+				<td><input class="number" maxlength="1" size="3"></input></td>
+				<td><input class="number" maxlength="1" size="3"></input></td>
+				<td><input class="number" maxlength="1" size="3"></input></td>
+				<td><input class="number" maxlength="1" size="3"></input></td>
+				<td><input class="number" maxlength="1" size="3"></input></td>
+			</tr>
+			<tr>
+				<td><input class="number" maxlength="1" size="3"></input></td>
+				<td><input class="number" maxlength="1" size="3"></input></td>
+				<td><input class="number" maxlength="1" size="3"></input></td>
+				<td><input class="number" maxlength="1" size="3"></input></td>
+				<td><input class="number" maxlength="1" size="3"></input></td>
+				<td><input class="number" maxlength="1" size="3"></input></td>
+				<td><input class="number" maxlength="1" size="3"></input></td>
+				<td><input class="number" maxlength="1" size="3"></input></td>
+				<td><input class="number" maxlength="1" size="3"></input></td>
+			</tr>
+			<tr>
+				<td><input class="number" maxlength="1" size="3"></input></td>
+				<td><input class="number" maxlength="1" size="3"></input></td>
+				<td><input class="number" maxlength="1" size="3"></input></td>
+				<td><input class="number" maxlength="1" size="3"></input></td>
+				<td><input class="number" maxlength="1" size="3"></input></td>
+				<td><input class="number" maxlength="1" size="3"></input></td>
+				<td><input class="number" maxlength="1" size="3"></input></td>
+				<td><input class="number" maxlength="1" size="3"></input></td>
+				<td><input class="number" maxlength="1" size="3"></input></td>
+			</tr>
+			<tr>
+				<td><input class="number" maxlength="1" size="3"></input></td>
+				<td><input class="number" maxlength="1" size="3"></input></td>
+				<td><input class="number" maxlength="1" size="3"></input></td>
+				<td><input class="number" maxlength="1" size="3"></input></td>
+				<td><input class="number" maxlength="1" size="3"></input></td>
+				<td><input class="number" maxlength="1" size="3"></input></td>
+				<td><input class="number" maxlength="1" size="3"></input></td>
+				<td><input class="number" maxlength="1" size="3"></input></td>
+				<td><input class="number" maxlength="1" size="3"></input></td>
+			</tr>
+		</table>
+		<br/>
+		<button>Check Answer</button><br/>
+		<button>Give Hint</button><br/>
+		<button>Random Generate New Game</button>
+		</center>
 	</body>
 </html>
