updated the game

--- a/index.html
+++ b/index.html
@@ -1,116 +1,241 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<title>Sudoku</title>
 		<link rel="stylesheet" href="style.css">
+		<link href='https://fonts.googleapis.com/css?family=Acme|Cabin:600' rel='stylesheet'>
 	</head>
 	<body>
 		<center>
 		<h1>Sudoku Game</h1>
+
+		<div class="step">
+			<span >Choose Difficulty</span></br></br>
+			<button id="easy" class="diff" onclick="setPercentage('easy')" >Easy</button>
+			<button id="medium" class="diff active" onclick="setPercentage('medium')" >Medium</button>
+			<button id="hard" class="diff" onclick="setPercentage('hard')" >Hard</button>
+		</div>
+		
+		<br>
+
+		<button onclick="createBoard()">New Game</button>
+		<br><br>
+		<div class="message_board">
+			<span id="message">Put in values below</span>
+		</div>
+		<br>
 		<table border="3" cellspacing="0">
 			<tr>
-				<td><input class="number" maxlength="1" size="3"></input></td>
-				<td><input class="number" maxlength="1" size="3"></input></td>
-				<td><input class="number" maxlength="1" size="3"></input></td>
-				<td><input class="number" maxlength="1" size="3"></input></td>
-				<td><input class="number" maxlength="1" size="3"></input></td>
-				<td><input class="number" maxlength="1" size="3"></input></td>
-				<td><input class="number" maxlength="1" size="3"></input></td>
-				<td><input class="number" maxlength="1" size="3"></input></td>
-				<td><input class="number" maxlength="1" size="3"></input></td>
+				<td><input id="number1" maxlength="1" size="3"></input></td>
+				<td><input id="number2" maxlength="1" size="3"></input></td>
+				<td><input id="number3" maxlength="1" size="3"></input></td>
+				<td><input id="number4" maxlength="1" size="3"></input></td>
+				<td><input id="number5" maxlength="1" size="3"></input></td>
+				<td><input id="number6" maxlength="1" size="3"></input></td>
+				<td><input id="number7" maxlength="1" size="3"></input></td>
+				<td><input id="number8" maxlength="1" size="3"></input></td>
+				<td><input id="number9" maxlength="1" size="3"></input></td>
 			</tr>
 			<tr>
-				<td bgcolor="white"><center>3</center></td>
-				<td><input class="number" maxlength="1" size="3"></input></td>
-				<td><input class="number" maxlength="1" size="3"></input></td>
-				<td><input class="number" maxlength="1" size="3"></input></td>
-				<td><input class="number" maxlength="1" size="3"></input></td>
-				<td><input class="number" maxlength="1" size="3"></input></td>
-				<td><input class="number" maxlength="1" size="3"></input></td>
-				<td><input class="number" maxlength="1" size="3"></input></td>
-				<td><input class="number" maxlength="1" size="3"></input></td>
+				<td><input id="number10" maxlength="1" size="3"></input></td>
+				<td><input id="number11" maxlength="1" size="3"></input></td>
+				<td><input id="number12" maxlength="1" size="3"></input></td>
+				<td><input id="number13" maxlength="1" size="3"></input></td>
+				<td><input id="number14" maxlength="1" size="3"></input></td>
+				<td><input id="number15" maxlength="1" size="3"></input></td>
+				<td><input id="number16" maxlength="1" size="3"></input></td>
+				<td><input id="number17" maxlength="1" size="3"></input></td>
+				<td><input id="number18" maxlength="1" size="3"></input></td>
 			</tr>
 			<tr>
-				<td><input class="number" maxlength="1" size="3"></input></td>
-				<td><input class="number" maxlength="1" size="3"></input></td>
-				<td><input class="number" maxlength="1" size="3"></input></td>
-				<td><input class="number" maxlength="1" size="3"></input></td>
-				<td><input class="number" maxlength="1" size="3"></input></td>
-				<td><input class="number" maxlength="1" size="3"></input></td>
-				<td><input class="number" maxlength="1" size="3"></input></td>
-				<td><input class="number" maxlength="1" size="3"></input></td>
-				<td><input class="number" maxlength="1" size="3"></input></td>
+				<td><input id="number19" maxlength="1" size="3"></input></td>
+				<td><input id="number20" maxlength="1" size="3"></input></td>
+				<td><input id="number21" maxlength="1" size="3"></input></td>
+				<td><input id="number22" maxlength="1" size="3"></input></td>
+				<td><input id="number23" maxlength="1" size="3"></input></td>
+				<td><input id="number24" maxlength="1" size="3"></input></td>
+				<td><input id="number25" maxlength="1" size="3"></input></td>
+				<td><input id="number26" maxlength="1" size="3"></input></td>
+				<td><input id="number27" maxlength="1" size="3"></input></td>
 			</tr>
 			<tr>
-				<td><input class="number" maxlength="1" size="3"></input></td>
-				<td><input class="number" maxlength="1" size="3"></input></td>
-				<td><input class="number" maxlength="1" size="3"></input></td>
-				<td><input class="number" maxlength="1" size="3"></input></td>
-				<td><input class="number" maxlength="1" size="3"></input></td>
-				<td><input class="number" maxlength="1" size="3"></input></td>
-				<td><input class="number" maxlength="1" size="3"></input></td>
-				<td><input class="number" maxlength="1" size="3"></input></td>
-				<td><input class="number" maxlength="1" size="3"></input></td>
+				<td><input id="number28" maxlength="1" size="3"></input></td>
+				<td><input id="number29" maxlength="1" size="3"></input></td>
+				<td><input id="number30" maxlength="1" size="3"></input></td>
+				<td><input id="number31" maxlength="1" size="3"></input></td>
+				<td><input id="number32" maxlength="1" size="3"></input></td>
+				<td><input id="number33" maxlength="1" size="3"></input></td>
+				<td><input id="number34" maxlength="1" size="3"></input></td>
+				<td><input id="number35" maxlength="1" size="3"></input></td>
+				<td><input id="number36" maxlength="1" size="3"></input></td>
 			</tr>
 			<tr>
-				<td><input class="number" maxlength="1" size="3"></input></td>
-				<td><input class="number" maxlength="1" size="3"></input></td>
-				<td><input class="number" maxlength="1" size="3"></input></td>
-				<td><input class="number" maxlength="1" size="3"></input></td>
-				<td><input class="number" maxlength="1" size="3"></input></td>
-				<td><input class="number" maxlength="1" size="3"></input></td>
-				<td><input class="number" maxlength="1" size="3"></input></td>
-				<td><input class="number" maxlength="1" size="3"></input></td>
-				<td><input class="number" maxlength="1" size="3"></input></td>
+				<td><input id="number37" maxlength="1" size="3"></input></td>
+				<td><input id="number38" maxlength="1" size="3"></input></td>
+				<td><input id="number39" maxlength="1" size="3"></input></td>
+				<td><input id="number40" maxlength="1" size="3"></input></td>
+				<td><input id="number41" maxlength="1" size="3"></input></td>
+				<td><input id="number42" maxlength="1" size="3"></input></td>
+				<td><input id="number43" maxlength="1" size="3"></input></td>
+				<td><input id="number44" maxlength="1" size="3"></input></td>
+				<td><input id="number45" maxlength="1" size="3"></input></td>
 			</tr>
 			<tr>
-				<td><input class="number" maxlength="1" size="3"></input></td>
-				<td><input class="number" maxlength="1" size="3"></input></td>
-				<td><input class="number" maxlength="1" size="3"></input></td>
-				<td><input class="number" maxlength="1" size="3"></input></td>
-				<td><input class="number" maxlength="1" size="3"></input></td>
-				<td><input class="number" maxlength="1" size="3"></input></td>
-				<td><input class="number" maxlength="1" size="3"></input></td>
-				<td><input class="number" maxlength="1" size="3"></input></td>
-				<td><input class="number" maxlength="1" size="3"></input></td>
+				<td><input id="number46" maxlength="1" size="3"></input></td>
+				<td><input id="number47" maxlength="1" size="3"></input></td>
+				<td><input id="number48" maxlength="1" size="3"></input></td>
+				<td><input id="number49" maxlength="1" size="3"></input></td>
+				<td><input id="number50" maxlength="1" size="3"></input></td>
+				<td><input id="number51" maxlength="1" size="3"></input></td>
+				<td><input id="number52" maxlength="1" size="3"></input></td>
+				<td><input id="number53" maxlength="1" size="3"></input></td>
+				<td><input id="number54" maxlength="1" size="3"></input></td>
 			</tr>
 			<tr>
-				<td><input class="number" maxlength="1" size="3"></input></td>
-				<td><input class="number" maxlength="1" size="3"></input></td>
-				<td><input class="number" maxlength="1" size="3"></input></td>
-				<td><input class="number" maxlength="1" size="3"></input></td>
-				<td><input class="number" maxlength="1" size="3"></input></td>
-				<td><input class="number" maxlength="1" size="3"></input></td>
-				<td><input class="number" maxlength="1" size="3"></input></td>
-				<td><input class="number" maxlength="1" size="3"></input></td>
-				<td><input class="number" maxlength="1" size="3"></input></td>
+				<td><input id="number55" maxlength="1" size="3"></input></td>
+				<td><input id="number56" maxlength="1" size="3"></input></td>
+				<td><input id="number57" maxlength="1" size="3"></input></td>
+				<td><input id="number58" maxlength="1" size="3"></input></td>
+				<td><input id="number59" maxlength="1" size="3"></input></td>
+				<td><input id="number60" maxlength="1" size="3"></input></td>
+				<td><input id="number61" maxlength="1" size="3"></input></td>
+				<td><input id="number62" maxlength="1" size="3"></input></td>
+				<td><input id="number63" maxlength="1" size="3"></input></td>
 			</tr>
 			<tr>
-				<td><input class="number" maxlength="1" size="3"></input></td>
-				<td><input class="number" maxlength="1" size="3"></input></td>
-				<td><input class="number" maxlength="1" size="3"></input></td>
-				<td><input class="number" maxlength="1" size="3"></input></td>
-				<td><input class="number" maxlength="1" size="3"></input></td>
-				<td><input class="number" maxlength="1" size="3"></input></td>
-				<td><input class="number" maxlength="1" size="3"></input></td>
-				<td><input class="number" maxlength="1" size="3"></input></td>
-				<td><input class="number" maxlength="1" size="3"></input></td>
+				<td><input id="number64" maxlength="1" size="3"></input></td>
+				<td><input id="number65" maxlength="1" size="3"></input></td>
+				<td><input id="number66" maxlength="1" size="3"></input></td>
+				<td><input id="number67" maxlength="1" size="3"></input></td>
+				<td><input id="number68" maxlength="1" size="3"></input></td>
+				<td><input id="number69" maxlength="1" size="3"></input></td>
+				<td><input id="number70" maxlength="1" size="3"></input></td>
+				<td><input id="number71" maxlength="1" size="3"></input></td>
+				<td><input id="number72" maxlength="1" size="3"></input></td>
 			</tr>
 			<tr>
-				<td><input class="number" maxlength="1" size="3"></input></td>
-				<td><input class="number" maxlength="1" size="3"></input></td>
-				<td><input class="number" maxlength="1" size="3"></input></td>
-				<td><input class="number" maxlength="1" size="3"></input></td>
-				<td><input class="number" maxlength="1" size="3"></input></td>
-				<td><input class="number" maxlength="1" size="3"></input></td>
-				<td><input class="number" maxlength="1" size="3"></input></td>
-				<td><input class="number" maxlength="1" size="3"></input></td>
-				<td><input class="number" maxlength="1" size="3"></input></td>
+				<td><input id="number73" maxlength="1" size="3"></input></td>
+				<td><input id="number74" maxlength="1" size="3"></input></td>
+				<td><input id="number75" maxlength="1" size="3"></input></td>
+				<td><input id="number76" maxlength="1" size="3"></input></td>
+				<td><input id="number77" maxlength="1" size="3"></input></td>
+				<td><input id="number78" maxlength="1" size="3"></input></td>
+				<td><input id="number79" maxlength="1" size="3"></input></td>
+				<td><input id="number80" maxlength="1" size="3"></input></td>
+				<td><input id="number81" maxlength="1" size="3"></input></td>
 			</tr>
 		</table>
-		<br/>
-		<button>Check Answer</button><br/>
-		<button>Give Hint</button><br/>
-		<button>Random Generate New Game</button>
+		<button onclick="checkBoard()" >Check Answer</button>
+		<button onclick="fillOne()">Give Hint</button>
+		<br><br><br><br>
 		</center>
+
+		<script type="text/javascript">
+
+			//get array from python code
+			var arr = [5, 8, 6, 2, 3, 7, 4, 9, 1, 4, 1, 3, 5, 9, 6, 2, 7, 8, 9, 2, 7, 1, 8, 4, 5, 3, 6, 2, 3, 7, 1, 5, 8, 6, 9, 4, 6, 8, 5, 4, 2, 9, 7, 1, 3, 9, 1, 4, 7, 6, 3, 8, 5, 2, 7, 9, 8, 5, 6, 2, 4, 1, 3, 1, 5, 4, 7, 8, 3, 2, 9, 6, 3, 2, 6, 1, 4, 9, 8, 5, 7];
+
+
+
+
+			var percentage = 0.35;
+			var max_hints = 3;
+			var hints = 0;
+			var previous_diff = 'medium';
+
+			function setPercentage(difficulty) {
+				document.getElementById(previous_diff).className = "diff";
+				document.getElementById(difficulty).className += " active";
+				previous_diff = difficulty;
+
+				if (difficulty == 'easy') {
+					percentage = 0.5;
+				} else if (difficulty == 'medium') {
+					percentage = 0.35;
+				} else {
+					percentage = 0.2;
+				}
+
+			}
+
+			function createBoard() {
+				clearBoard();
+				var i = 1; 
+				while(i <= 81) {
+					var id_num = "number" + i;
+					if (Math.random() < percentage) {
+						document.getElementById(id_num).value = arr[i - 1];
+						document.getElementById(id_num).style.background = "white";
+						document.getElementById(id_num).disabled = true;
+					}
+					i = i + 1;
+				}
+			}
+
+			function clearBoard() {
+				var i = 1; 
+				while(i <= 81) {
+					var id_num = "number" + i;
+					document.getElementById(id_num).value = "";
+					document.getElementById(id_num).style.background = "#f28a8a";
+					document.getElementById(id_num).disabled = false;
+					i = i + 1;
+				}
+				hints = 0;	
+
+			}
+
+			function fillOne() {
+				if (hints < max_hints) {
+					var id_num;
+					do {
+						var rand = Math.ceil(Math.random()*81);
+						id_num = "number" + rand;
+					}
+					while (document.getElementById(id_num).disabled)
+
+					document.getElementById(id_num).style.background = "yellow";
+					document.getElementById("message").innerHTML = "This cell is " + arr[rand - 1];
+					document.getElementById("message").style.color = "red";
+							document.getElementById("message").style.fontSize = "20px";
+					hints++;
+				} else {
+					document.getElementById("message").innerHTML = "You ran out of hints!";
+					document.getElementById("message").style.color = "red";
+							document.getElementById("message").style.fontSize = "20px";
+				}
+
+			}
+
+			function checkBoard() {
+
+				var i = 1; 
+				while(i <= 81) {
+					var id_num = "number" + i;
+					var value = document.getElementById(id_num).value;
+					if (value != "") {
+						if(arr[i - 1] != value) {
+
+							document.getElementById(id_num).style.background = "yellow";
+							document.getElementById("message").innerHTML = "This cell is supposed to be " + arr[i - 1];
+							document.getElementById("message").style.color = "red";
+							document.getElementById("message").style.fontSize = "20px";
+							setTimeout(function(){ document.getElementById(id_num).style.background = "#f28a8a"; }, 2000);
+							break;
+						}
+					} else {
+						document.getElementById("message").innerHTML = "Board is not filled yet";
+						document.getElementById("message").style.color = "red";
+							document.getElementById("message").style.fontSize = "20px";
+						break;
+					}
+					i = i + 1;
+				}
+				if (i == 82) {
+					document.getElementById("message").innerHTML = "YAY YOU DID IT!";
+				}
+			}
+
+		</script>
 	</body>
 </html>
