updated the game

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<center>
 		<h1>Sudoku Game</h1>
 
-		<div class="step">
+		<div class="step">skjflksjdflk
 			<span >Choose Difficulty</span></br></br>
 			<button id="easy" class="diff" onclick="setPercentage('easy')" >Easy</button>
 			<button id="medium" class="diff active" onclick="setPercentage('medium')" >Medium</button>
